fixed h2 for dark mode

--- a/src/style/upper-services-page.css
+++ b/src/style/upper-services-page.css
@@ -34,6 +34,7 @@
   margin-right: 54rem;
   font-size: 45px;
   font-family: Monserat-ligth, sans-serif;
+  color: #212121;
 }
 .heading-container {
   display: flex;
